--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         After careful consideration and a generous grant from NASA, our team has determined that a woodchuck could chuck five wood, with a standard deviation of +/- .37 wood.
       </p>
       <footer>posted by Chuck Wooden</footer>
+      <!-- <a href="#" onclick="addComment();">Add Comment</a> -->
+      <form id="newComment" onSubmit="addComment()">
+        Add Comment: <input type="text" id="commentText"><br>
+        Your name: <input type="test" id="commenterName"><br>
+        <input type="submit">
+      </form>
+      <div id="comments">
+      </div>
     </article>
   </body>
 </html>
